--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,7 +25,7 @@
 									<td>{{this.id}}</td>
 									<td>{{this.burger_name}}</td>
 									<td>
-										<form class="form-inline" action="/{{this.id}}?_method=PUT" method="POST">
+										<form class="form-inline" action="/api/{{this.id}}?_method=PUT" method="POST">
 											<input type="hidden" name="devoured" value="1">
 											<button class="btn btn-success" type="submit">Devour</button>
 										</form>
@@ -61,7 +61,7 @@
 									<td>{{this.id}}</td>
 									<td>{{this.burger_name}}</td>
 									<td>
-										<form class="form-inline" action="/{{this.id}}?_method=PUT" method="POST">
+										<form class="form-inline" action="/api/{{this.id}}?_method=PUT" method="POST">
 											<input type="hidden" name="devoured" value="0">
 											<button class="btn btn-warning" type="submit">Order</button>
 										</form>
