--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,7 +7,7 @@
 		<div class="col-md-6">
 			<div class="panel panel-default">
 				<div class="text-center">
-					<h2>Burgers Ready</h2>
+					<h2>Burgers Devoured</h2>
 				</div>
 				<div class="panel-body">
 					<ul>
@@ -32,7 +32,7 @@
 
 			<div class="panel panel-default">
 				<div class="text-center">
-					<h2>Burgers Menu</h2>
+					<h2>Burgers Ready</h2>
 				</div>
 				<div class="panel-body">
 					<table class="table">
